# CHIP-8-Emulator

./: CMakeLists.txt  LICENSE  Makefile  README.md  chip8  run.bat  run.sh
include/: cpu.h  glad.h
src/: cpu.cpp  display.cpp  glad.c  main.cpp  memory.cpp  utils.cpp
